# supriya-shm

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml  test.yaml
dev/: bump-version.py
src/supriya_shm/: __init__.py  _shm.cpp  _shm.pyi  _shm.pyx
tests/: test_ServerSHM.py
