[project]
name = "supriya-shm"
version = "0.1.0"
description = "SuperCollider Shared Memory Bindings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["cython", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[[tool.setuptools.ext-modules]]
include-dirs = ["vendor/", "vendor/supercollider/common/", "vendor/TLSF-2.4.6/src/"]
language = "c++"
name = "supriya_shm._shm"
sources = ["src/supriya_shm/_shm.cpp"]
