[build-system]
requires = ["cython", "setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "supriya-shm"
version = "26.3b0"
description = "SuperCollider Shared Memory Bindings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[[tool.setuptools.ext-modules]]
include-dirs = ["vendor/", "vendor/supercollider/common/", "vendor/TLSF-2.4.6/src/"]
language = "c++"
name = "supriya_shm._shm"
sources = ["src/supriya_shm/_shm.pyx"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]
